Bug 58232 - CONDITIONAL FORMATTING: Loss of configuration in "Manage"
Summary: CONDITIONAL FORMATTING: Loss of configuration in "Manage"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta2
Keywords:
: 58487 58488 58489 58490 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-13 08:06 UTC by Michel Rudelle
Modified: 2012-12-20 18:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michel Rudelle 2012-12-13 08:06:45 UTC
Steps to reproduce:
  Fill cells A1:A10 with : 1,2, … 9,10
  Select range A1:A10
  Format > Conditional formatting  > Color scale > Color scale (2 Entries) > Ok
The result is correct
  Format > Conditional formatting  > Manage > Select A1:A10 > Edit :
Previous choices are not displayed (and are not  kept if we click on Ok)

Platform :
Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
Vista
Comment 1 Not Assigned 2012-12-15 06:52:25 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4578832a84b1818943da907c4e292af64c49beee

use correct cond format dlg setUp for colorscales, fdo#58232



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Not Assigned 2012-12-15 14:14:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d416f216942d1045db7fbb621f4f00aedbc933ad&g=libreoffice-4-0

use correct cond format dlg setUp for colorscales, fdo#58232


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jean-Baptiste Faure 2012-12-15 20:21:24 UTC
Verified in Version 4.0.0.0.beta1+ (Build ID: 2988f4bbc9c381e91a372a6aad5d0334d713438) under Ubuntu 12.04 x86_64

Thank you very much Markus for this quick fix :-)

Best regards. JBF
Comment 4 Michel Rudelle 2012-12-19 17:30:21 UTC
*** Bug 58488 has been marked as a duplicate of this bug. ***
Comment 5 Michel Rudelle 2012-12-19 17:53:00 UTC
*** Bug 58490 has been marked as a duplicate of this bug. ***
Comment 6 Michel Rudelle 2012-12-19 17:57:51 UTC
*** Bug 58489 has been marked as a duplicate of this bug. ***
Comment 7 Michel Rudelle 2012-12-20 18:33:44 UTC
*** Bug 58487 has been marked as a duplicate of this bug. ***