use correct cond format dlg setUp for colorscales, fdo#58232

Change-Id: Ib119b09b110d6563bc0abd304f60031a8592d7f1